# openlintel

./: .gitignore  auditdwgimplementation.md  auditissuesimplementation.md  codeaudit.md  codeauditdwg.md  docker-compose.yml  generate_feature_pdf.py  missingfeaturesimplementation.md  openlintelfeatures.md  pnpm-lock.yaml  sampletest.md  testingguide.md  userflow.md  usrflow.md
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/scripts/: dxf2png.py
apps/web/src/: middleware.ts
apps/web/src/app/: page.tsx
apps/web/src/app/(dashboard)/analytics/: page.tsx
apps/web/src/app/(dashboard)/marketplace/: layout.tsx
apps/web/src/app/(dashboard)/project/[id]/: loading.tsx  page.tsx
apps/web/src/app/(dashboard)/project/[id]/acoustics/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/annotations/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/ar/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/as-built/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/benchmarks/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/bom/: loading.tsx  page.tsx
apps/web/src/app/(dashboard)/project/[id]/bookings/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/client-portal/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/closet-design/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/collaboration/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/compliance/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/compliance-chat/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/crm/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/cutlist/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/design-feedback/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/designs/: loading.tsx  page.tsx
apps/web/src/app/(dashboard)/project/[id]/document-versions/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/drawing-sets/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/drawings/: loading.tsx  page.tsx
apps/web/src/app/(dashboard)/project/[id]/drone/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/editor/: loading.tsx  page.tsx
apps/web/src/app/(dashboard)/project/[id]/energy/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/exterior/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/floor-plan/: loading.tsx  page.tsx
apps/web/src/app/(dashboard)/project/[id]/floor-plan-editor/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/inspiration/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/insurance/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/integrations/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/kitchen-bath/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/lidar/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/lighting/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/material-boards/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/multi-unit/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/outdoor/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/parametric/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/permits/: page.tsx
apps/web/src/app/(dashboard)/project/[id]/post-occupancy/: page.tsx
apps/web/src/app/api/upload/: route.ts
apps/web/src/app/api/uploads/[key]/: route.ts
apps/web/src/app/auth/signin/: page.tsx
apps/web/src/components/: bom-table.tsx  cutlist-table.tsx  design-generation-dialog.tsx  design-result-viewer.tsx  floor-plan-upload.tsx  gantt-chart.tsx  job-progress.tsx  nesting-viewer.tsx  room-redesign-wizard.tsx  sidebar.tsx  topnav.tsx
apps/web/src/components/editor-3d/: collab-cursors.tsx  editor-viewport.tsx  furniture-object.tsx
apps/web/src/components/xr/: ar-placement.tsx  ar-scene-3d.tsx  vr-scene-3d.tsx  vr-walkthrough.tsx
apps/web/src/lib/: auth.config.ts  auth.ts  file-to-image.ts  storage.ts  svg-generator.ts
apps/web/src/lib/trpc/: provider.tsx
apps/web/src/server/trpc/routers/: acoustic.ts  analytics.ts  arVr.ts  asBuilt.ts  benchmark.ts  bom.ts  budgetOptimization.ts  catalogue.ts  clientPortal.ts  closetDesign.ts  compliance.ts  complianceChat.ts  complianceQuery.ts  crm.ts  cutlist.ts  designLearning.ts  designVariant.ts  documentVersion.ts  drawing.ts  drawingSet.ts  drone.ts  energyModel.ts  exterior.ts  floorPlan.ts  floorPlanEditor.ts  floorPlanRender.ts  index.ts  inspiration.ts  insurance.ts  integration.ts  kitchenBath.ts  lidar.ts  lighting.ts  materialBoard.ts  mep.ts  multiUnit.ts  outdoorDesign.ts  parametric.ts  payment.ts  permit.ts  (+28 more)
ml/floor-plan-digitizer/: pyproject.toml
ml/floor-plan-digitizer/src/openlintel_digitizer/: __init__.py  dwg_converter.py  pdf_extractor.py  pipeline.py
sampledb/: 001_users_auth.sql  002_projects_rooms.sql  003_uploads_designs.sql  004_jobs.sql  005_bom_drawings_cutlist_mep.sql  006_catalogue.sql  007_schedule_milestones.sql  008_procurement_payments.sql  009_collaboration.sql  010_contractors.sql  011_intelligence.sql  012_post_occupancy.sql  013_marketplace.sql  README.md  seed_all.sql
services/bom-engine/: pyproject.toml
services/bom-engine/src/routers/: bom.py
services/bom-engine/src/services/: structural_bom.py
services/drawing-generator/: pyproject.toml
services/media-service/src/routers/: upload.py
services/media-service/src/services/: validator.py
services/procurement-service/: pyproject.toml
services/project-service/: pyproject.toml
services/vision-engine/: pyproject.toml
services/vision-engine/src/routers/: vision.py
services/vision-engine/src/services/: file_router.py
(+23 files in other folders)
