[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlintel-floor-plan-digitizer"
version = "0.1.0"
description = "Floor plan to CAD conversion: raster/DWG -> VLM extraction -> DXF generation"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [{ name = "OpenLintel Team" }]
dependencies = [
    "openlintel-shared",
    "ezdxf>=1.1,<2",
    "opencv-python-headless>=4.9,<5",
    "numpy>=1.26,<3",
    "pillow>=11.0.0",
    "litellm>=1.40,<2",
    "pydantic>=2.7,<3",
    "structlog>=24.1,<25",
    # PDF floor plan extraction
    "pdf2image>=1.16,<2",
    "pdfplumber>=0.11,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "mypy>=1.10,<2",
    "ruff>=0.4,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openlintel_digitizer"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
    "openlintel-shared @ {root:uri}/../../packages/python-shared",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["openlintel_digitizer", "openlintel_shared"]
