[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlintel-project-service"
version = "0.1.0"
description = "Construction scheduling, Gantt chart generation, milestone management, and change order impact analysis for OpenLintel"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [{ name = "OpenLintel Team" }]
dependencies = [
    "openlintel-shared",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "ortools>=9.9,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "mypy>=1.10,<2",
    "ruff>=0.4,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

# Path dependency for local development (pip install -e .)
[tool.hatch.envs.default]
dependencies = [
    "openlintel-shared @ {root:uri}/../../packages/python-shared",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["openlintel_shared", "src"]
